made text easier to see

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="max-width">
             <div class="home-content">
                 <h1>Hey, I'm Jonathan Giraldo Mosquera </h1>
-                <div class="text-1">I am a Full Stack Developer who enjoys working front end and backend.</div>
+                <div class="text-1">I am a Full Stack Developer</div>
             </div>
         </div>
     </section>
@@ -125,7 +125,7 @@
     <section class="section-container bg-sec" id="portfolio">
         <div class="max-width">
             <h2 class="title text-light">Portfolio</h2>
-            <span class="title-description">Here are some of the Projects I have made with the skills I have</span>
+            <span class="title-description text-light">Here are some of the Projects I have made with the skills I have</span>
             <div class="projects-container">
                 <div class="project-1">
                     <h3 class="section-subheading text-light">Yelpcamp</h3>
