changes to colours

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="max-width">
             <div class="home-content">
                 <h1>Hey, I'm Jonathan Giraldo Mosquera </h1>
-                <div class="text-1">I am a Full Stack Developer</div>
+                <div class="text-1 text-mid">I am a Full Stack Developer</div>
             </div>
         </div>
     </section>
@@ -125,11 +125,18 @@
     <section class="section-container bg-sec" id="portfolio">
         <div class="max-width">
             <h2 class="title text-light">Portfolio</h2>
-            <span class="title-description text-light">Here are some of the Projects I have made with the skills I have</span>
+            <span class="title-description text-mid">Here are some of the Projects I have made with the skills I
+                have</span>
             <div class="projects-container">
                 <div class="project-1">
                     <h3 class="section-subheading text-light">Yelpcamp</h3>
+                    <p class="about-para text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
+                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
+                        eveniet, officia officiis soluta amet.
+                    </p>
                     <img class="project-img" src="imgs/project-1-img (2).png" alt="yelpcamp project">
+
                     <div class="btn-wrap">
                         <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
                         <a class="btn-effect" href="#"><i class="fa-brands fa-github"></i> GitHub</a>
@@ -138,6 +145,12 @@
                 </div>
                 <div class="project-2 ">
                     <h3 class="section-subheading text-light">Todo List</h3>
+                    <p class="about-para text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
+                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
+                        eveniet, officia officiis soluta amet.
+                    </p>
+
                     <img class="project-img" src="imgs/project-2-img (2).png" alt="todo list project">
                     <div class="btn-wrap">
                         <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
@@ -148,6 +161,11 @@
                 </div>
                 <div class="project-3">
                     <h3 class="section-subheading text-light">Weather App</h3>
+                    <p class="about-para text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
+                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
+                        eveniet, officia officiis soluta amet.
+                    </p>
                     <img class="project-img" src="imgs/project-3-img (2).png" alt="">
                     <div class="btn-wrap">
                         <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
@@ -158,6 +176,11 @@
                 </div>
                 <div class="project-4">
                     <h3 class="section-subheading text-light">Frontend-Mentor Project</h3>
+                    <p class="about-para text-light">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
+                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
+                        eveniet, officia officiis soluta amet.
+                    </p>
                     <img class="project-img" src="imgs/project-4-img (2).png" alt="">
                     <div class="btn-wrap">
                         <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
