--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="projects-container">
                 <div class="project-1">
                     <h3 class="section-subheading text-light">Yelpcamp</h3>
-                    <p class="about-para text-light">
+                    <p class="about-para text-mid">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
                         cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
                         eveniet, officia officiis soluta amet.
@@ -145,7 +145,7 @@
                 </div>
                 <div class="project-2 ">
                     <h3 class="section-subheading text-light">Todo List</h3>
-                    <p class="about-para text-light">
+                    <p class="about-para text-mid">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
                         cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
                         eveniet, officia officiis soluta amet.
@@ -161,7 +161,7 @@
                 </div>
                 <div class="project-3">
                     <h3 class="section-subheading text-light">Weather App</h3>
-                    <p class="about-para text-light">
+                    <p class="about-para text-mid">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
                         cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
                         eveniet, officia officiis soluta amet.
@@ -176,7 +176,7 @@
                 </div>
                 <div class="project-4">
                     <h3 class="section-subheading text-light">Frontend-Mentor Project</h3>
-                    <p class="about-para text-light">
+                    <p class="about-para text-mid">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
                         cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
                         eveniet, officia officiis soluta amet.
