more or less final changes

--- a/index.html
+++ b/index.html
@@ -79,17 +79,18 @@
                 <div class="about-content-main">
                     <h3 class="section-subheading">More about me</h3>
                     <p class="about-para">
-                        Hi, I'm Jonathan. A self taught Full Stack Developer.I have a passion for making websites and
-                        web applications.
-                        My programming language is Javascript. A powerfull tool at my disposale for which I use in the
-                        front-end and back-end with Node.js.
-                        Have a look in the Projects section where i get to show off my skills.
+                        Hi, I'm Jonathan. A self taught Full Stack Developer. I have a passion for creating responsive
+                        websites and webapps.
+                        My programming language is Javascript. A powerfull tool at my disposale which allows my
+                        creativity to come alive.
+                        Have a look in the Projects section where I get to show off my skills.
                     </p>
                     <p class="about-para">
-                        It can sometimes feel overwhelming with the never ending tools to learn but what I love about it
-                        most, there is always a cool libray or tool to learn ahead of me.
-                        I am currently learning react and cannot wait to explore some of the libraies it has to offer. I
-                        will update my projects as I continue my jounrey.
+                        I am currently learning react and cannot wait to explore some of its available libraries. I'll
+                        be
+                        continously updating my projects as I continue to learn new things on my jounrey. When I'm not
+                        coding I am going to the gym, watching anime, movies and consuming as much football
+                        as possible!
                     </p>
                     <p class="about-para">
                         I am open to Job opptunities where I can grow, contritube and continue to learn.
@@ -131,30 +132,34 @@
                 <div class="project-1">
                     <h3 class="section-subheading text-light">Yelpcamp</h3>
                     <p class="about-para text-mid">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
-                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
-                        eveniet, officia officiis soluta amet.
+                        A Full-stack web applicaton made using Node.js for the back-end and MongoDB Atlas as a cloud
+                        datbase. Yelpcamp allows users to create, review and delete campgorunds. You have to start by
+                        creating an account to utilise.
                     </p>
                     <img class="project-img" src="imgs/project-1-img (2).png" alt="yelpcamp project">
 
                     <div class="btn-wrap">
-                        <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
-                        <a class="btn-effect" href="#"><i class="fa-brands fa-github"></i> GitHub</a>
+                        <a class="btn-effect" href="https://fast-fortress-38128.herokuapp.com/"><i
+                                class="fa-solid fa-eye"></i> Live Site</a>
+                        <a class="btn-effect" href="https://github.com/JonaGira11/YelpCamp-Project"><i
+                                class="fa-brands fa-github"></i> GitHub</a>
                     </div>
 
                 </div>
                 <div class="project-2 ">
-                    <h3 class="section-subheading text-light">Todo List</h3>
+                    <h3 class="section-subheading text-light">Todo App</h3>
                     <p class="about-para text-mid">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
-                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
-                        eveniet, officia officiis soluta amet.
+                        It can be difficult to remember everything we need "to do". This is where this Todo App
+                        comes in handy. A functioning crud application that allows users to stores tasks on MongoDD that
+                        are instanly dispalyed on the page with ejs.
                     </p>
 
                     <img class="project-img" src="imgs/project-2-img (2).png" alt="todo list project">
                     <div class="btn-wrap">
-                        <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
-                        <a class="btn-effect" href="#"><i class="fa-brands fa-github"></i> GitHub</a>
+                        <a class="btn-effect" href="https://sheltered-anchorage-79400.herokuapp.com/todos"><i
+                                class="fa-solid fa-eye"></i> Live Site</a>
+                        <a class="btn-effect" href="https://github.com/JonaGira11/Mongo-Todo-App"><i
+                                class="fa-brands fa-github"></i> GitHub</a>
                     </div>
 
 
@@ -162,14 +167,16 @@
                 <div class="project-3">
                     <h3 class="section-subheading text-light">Weather App</h3>
                     <p class="about-para text-mid">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
-                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
-                        eveniet, officia officiis soluta amet.
+                        A Weather app that allows user to find out to weather of any city in the world using the
+                        OpenWeatherAPI. Fully responsive using CSS grid and flexbox. Data is feteched with the axios
+                        library.
                     </p>
                     <img class="project-img" src="imgs/project-3-img (2).png" alt="">
                     <div class="btn-wrap">
-                        <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
-                        <a class="btn-effect" href="#"><i class="fa-brands fa-github"></i> GitHub</a>
+                        <a class="btn-effect" href="https://weathr-app.vercel.app/"><i class="fa-solid fa-eye"></i> Live
+                            Site</a>
+                        <a class="btn-effect" href="https://github.com/JonaGira11/Weathr-App"><i
+                                class="fa-brands fa-github"></i> GitHub</a>
                     </div>
 
 
@@ -177,14 +184,15 @@
                 <div class="project-4">
                     <h3 class="section-subheading text-light">Frontend-Mentor Project</h3>
                     <p class="about-para text-mid">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, deserunt aliquid temporibus
-                        cum beatae iure hic quae veniam debitis totam similique ratione tempore animi dignissimos
-                        eveniet, officia officiis soluta amet.
+                        A landing page created using HTML and Tailwind.Css Project taken from Frontend-Mentor. A great
+                        rescourse to improve CSS skills. Fully responsive ready for mobile use.
                     </p>
                     <img class="project-img" src="imgs/project-4-img (2).png" alt="">
                     <div class="btn-wrap">
-                        <a class="btn-effect" href="#"><i class="fa-solid fa-eye"></i> Live Site</a>
-                        <a class="btn-effect" href="#"><i class="fa-brands fa-github"></i> GitHub</a>
+                        <a class="btn-effect" href="https://frontend-mentor-project-five.vercel.app/"><i
+                                class="fa-solid fa-eye"></i> Live Site</a>
+                        <a class="btn-effect" href="https://github.com/JonaGira11/Frontend-mentor-project"><i
+                                class="fa-brands fa-github"></i> GitHub</a>
                     </div>
 
                 </div>
@@ -204,21 +212,21 @@
                     <h3 class="section-subheading">Get in Touch</h3>
                     <div class="social-contact">
                         <i class="fa-brands fa-github"></i>
-                        <a href="#">GitHub</a>
+                        <a href="https://github.com/JonaGira11">GitHub</a>
                     </div>
                     <div class="social-contact">
                         <i class="fa-brands fa-twitter"></i>
-                        <a href="#">Twitter</a>
+                        <a href="https://twitter.com/j_sallz11">Twitter</a>
                     </div>
                     <div class="social-contact">
                         <i class="fa-brands fa-linkedin-in"></i>
-                        <a href="#">Linkedin</a>
+                        <a href="https://www.linkedin.com/in/jonathan-giraldo-mosquera-b53083238/">Linkedin</a>
                     </div>
 
 
                 </div>
                 <div class="form-container">
-                    <h3 class="section-subheading">Or Fill out this form</h3>
+                    <h3 class="section-subheading">Fill out this form</h3>
                     <form id="formtest">
                         <div class="contact-input">
                             <input class="form-input" type="text" name="name" placeholder="Name" required>
