--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <p class="about-para">
                         Hi, I'm Jonathan. A self taught Full Stack Developer. I have a passion for creating responsive
                         websites and webapps.
-                        My programming language is Javascript. A powerfull tool at my disposale which allows my
+                        My programming language is Javascript. A powerfull tool at my disposal which allows my
                         creativity to come alive.
                         Have a look in the Projects section where I get to show off my skills.
                     </p>
