more spell erros

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="imgs/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="imgs//favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
-<link rel="manifest" href="imgs/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png">
+    <link rel="manifest" href="imgs/site.webmanifest">
 </head>
 
 <body>
@@ -98,7 +98,7 @@
                         as possible!
                     </p>
                     <p class="about-para">
-                        I am open to Job opptunities where I can grow, contritube and continue to learn.
+                        I am open to Job opportunities where I can grow, contribute and continue to learn.
                     </p>
 
                 </div>
