--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="max-width">
             <div class="home-content">
                 <h1>Hey, I'm Jonathan Giraldo Mosquera </h1>
-                <div class="text-1 text-mid">I am a Full Stack Developer</div>
+                <div class="text-1 text-mid">I'm a Full Stack Developer</div>
             </div>
         </div>
     </section>
