--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
                         Have a look in the Projects section where I get to show off my skills.
                     </p>
                     <p class="about-para">
-                        I am currently learning react and cannot wait to explore some of its available libraries. I'll
-                        be
-                        continously updating my projects as I continue to learn new things on my jounrey. When I'm not
+                        I am currently exploring react libraries and building new things with them. I'll
+                        be continously updating my projects section as I create cool projects. When I'm not
                         coding I am going to the gym, watching anime, movies and consuming as much football
                         as possible!
                     </p>
@@ -108,16 +107,22 @@
                         <div class="skills-list-item">HTML</div>
                         <div class="skills-list-item">CSS</div>
                         <div class="skills-list-item">Javascript</div>
+                        <div class="skills-list-item">Node.js</div>
+                        <div class="skills-list-item">React</div>
+                        <div class="skills-list-item">Next.js</div>
+                        <div class="skills-list-item">Material UI</div>
+                        <div class="skills-list-item">React Router</div>
+                        <div class="skills-list-item">Graphql</div>
+                        <div class="skills-list-item">Express</div>
                         <div class="skills-list-item">Bootstrap</div>
                         <div class="skills-list-item">Tailwind</div>
-                        <div class="skills-list-item">Node.js</div>
-                        <div class="skills-list-item">Express</div>
                         <div class="skills-list-item">MongoDB</div>
                         <div class="skills-list-item">Terminal</div>
                         <div class="skills-list-item">Linux</div>
                         <div class="skills-list-item">Git</div>
                         <div class="skills-list-item">Github</div>
                         <div class="skills-list-item">SASS</div>
+                        
                     </div>
 
                 </div>
