more skills changes

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                         <div class="skills-list-item">CSS</div>
                         <div class="skills-list-item">Javascript</div>
                         <div class="skills-list-item">Node.js</div>
+                        <div class="skills-list-item">TypeScript</div>
                         <div class="skills-list-item">React</div>
                         <div class="skills-list-item">Next.js</div>
                         <div class="skills-list-item">Material UI</div>
