--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                         <div class="skills-list-item">Next.js</div>
                         <div class="skills-list-item">Material UI</div>
                         <div class="skills-list-item">React Router</div>
+                        <div class="skills-list-item">Redux</div>
                         <div class="skills-list-item">Graphql</div>
                         <div class="skills-list-item">Express</div>
                         <div class="skills-list-item">Bootstrap</div>
@@ -123,7 +124,7 @@
                         <div class="skills-list-item">Git</div>
                         <div class="skills-list-item">Github</div>
                         <div class="skills-list-item">SASS</div>
-                        
+
                     </div>
 
                 </div>
@@ -176,33 +177,33 @@
 
                 </div>
                 <div class="project-3">
-                    <h3 class="section-subheading text-light">Weather App</h3>
+                    <h3 class="section-subheading text-light">Twitter Clone</h3>
                     <p class="about-para text-mid">
-                        A Weather app that allows user to find out to weather of any city in the world using the
-                        OpenWeatherAPI. Fully responsive using CSS grid and flexbox. Data is feteched with the axios
-                        library.
+                        Twitter clone built with React and Next.js. Authentication with Next-auth to allow user to sign
+                        in with thier twitter accounts using the twitter api. Connected to sanity io to manage tweets and comments.
                     </p>
-                    <img class="project-img" src="imgs/project-3-img (2).png" alt="">
+                    <img class="project-img" src="imgs/twitter-clone-thumbnail.png" alt="twitter clone">
                     <div class="btn-wrap">
-                        <a class="btn-effect" href="https://weathr-app.vercel.app/"><i class="fa-solid fa-eye"></i> Live
+                        <a class="btn-effect" href="https://twitter-clone-jonagira11.vercel.app/"><i
+                                class="fa-solid fa-eye"></i> Live
                             Site</a>
-                        <a class="btn-effect" href="https://github.com/JonaGira11/Weathr-App"><i
+                        <a class="btn-effect" href="https://github.com/JonaGira11/Twitter-Clone"><i
                                 class="fa-brands fa-github"></i> GitHub</a>
                     </div>
 
 
                 </div>
                 <div class="project-4">
-                    <h3 class="section-subheading text-light">Frontend-Mentor Project</h3>
+                    <h3 class="section-subheading text-light">Hulu Clone</h3>
                     <p class="about-para text-mid">
-                        A landing page created using HTML and Tailwind.Css Project taken from Frontend-Mentor. A great
-                        rescourse to improve CSS skills. Fully responsive ready for mobile use.
+                        A landing page created using React and Next.js. Using Next.js api to make calls to the TMDB api
+                        for the data. Fully responsive made with a mobile first desing using Tailwind.css.
                     </p>
-                    <img class="project-img" src="imgs/project-4-img (2).png" alt="">
+                    <img class="project-img" src="imgs/hulu clone thumbnail (2).png" alt="" hulu clone>
                     <div class="btn-wrap">
-                        <a class="btn-effect" href="https://frontend-mentor-project-five.vercel.app/"><i
+                        <a class="btn-effect" href="https://hulu-clone-jonagira11.vercel.app/"><i
                                 class="fa-solid fa-eye"></i> Live Site</a>
-                        <a class="btn-effect" href="https://github.com/JonaGira11/Frontend-mentor-project"><i
+                        <a class="btn-effect" href="https://github.com/JonaGira11/HuluClone"><i
                                 class="fa-brands fa-github"></i> GitHub</a>
                     </div>
 
